# univ_info_cursor

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-pages-quick.yml  oc-sync.yml
config/: campus_access.yaml  department_links.yaml  regions.yaml  sources.yaml  target_catalog.yaml
data/snapshots/: aoyama_oc.json  chuo_oc.json  dendai_oc.json  hosei_oc.json  keio_oc.json  kogakuin_oc.json  meiji_opencampus.json  rikkyo_oc.json  shibaura_oc.json  sophia_oc.json  tcu_oc.json  teu_oc.json  tus_oc.json  waseda_oc.json
docs/: index.md  opencampus.md
docs/stylesheets/: extra.css
src/univ_oc/: __init__.py  __main__.py  cli.py  config_loader.py  fetch.py  mail.py  render.py  snapshot.py
src/univ_oc/parsers/: __init__.py  aoyama.py  chuo.py  dendai.py  generic.py  hosei.py  keio.py  kogakuin.py  meiji.py  rikkyo.py  shibaura.py  sophia.py  tcu.py  teu.py  tus.py  waseda.py
tests/: test_meiji.py  test_sophia.py  test_waseda.py
tests/fixtures/: meiji_oc.html  waseda_oc.html
